# turboquant_plus

./: .gitignore  README.md  pyproject.toml
benchmarks/: benchmark_results.md  demo.py  run_benchmark.py  temporal_decay_prototype.py  validate_real_model.py
docs/: cross-model-validation.md  decode-speed-status.md  hardware-comparison-matrix.md  niah-results-m5max-multikey.json  niah-results-m5max-multikey.md  niah-results-m5max-single.json  niah-results-m5max-single.md  speed-experiments.md  threshold-ablation.md  turboquant-plus-experiments.md  upstream-pr-plan.md  weight-compression-results.md
docs/papers/: sparse-v-dequant.md  triattention-v3.md  turbo4-resurrection.md
docs/threshold-ablation-logs/: m2_pro_4mag_sparse_v.txt  q4_0_full_validation.txt  q8_0_sparse_v_ablation_m5.txt  q8_0_sparse_v_quality_m5.txt  tau_1e-4.txt  tau_1e-5.txt  tau_1e-6.txt  tau_1e-7.txt  tau_1e-8.txt
niah_q4_0_no_sparse_v/: niah_single_20260328_041021.json  niah_single_20260328_041021.md
niah_q4_0_sparse_v/: niah_single_20260328_040732.json  niah_single_20260328_040732.md
niah_q8_0_no_sparse_v/: niah_single_20260327_125534.json  niah_single_20260327_125534.md
niah_q8_0_sparse_v/: niah_single_20260327_125237.json  niah_single_20260327_125237.md
niah_sparse_v/: niah_single_20260327_053128.json  niah_single_20260327_053128.md
scripts/: README.md  niah_test.py  turbo-diag  turbo_hardware_diag.py
tests/: test_hw_replay.py  test_niah.py  test_rotation.py  test_turbo_hardware_diag.py
turboquant/: hw_replay.py  rotation.py
