[project]
name = "turboquant"
version = "0.1.0"
description = "TurboQuant: KV cache compression via PolarQuant + QJL (ICLR 2026)"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
bench = [
    "matplotlib",
]

[tool.setuptools.packages.find]
include = ["turboquant*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
